week1/web/k8s/20-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: week1
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 8080
